Add sitemap and robots.txt

--- a/content/404.md
+++ b/content/404.md
@@ -2,6 +2,7 @@
 title: Not Found
 layout: content-well
 permalink: 404.html
+eleventyExcludeFromCollections: true
 ---
 
 Sorry, but the page you were trying to view does not exist.
