Converting site to lume

--- a/content/404.md
+++ b/content/404.md
@@ -1,8 +1,7 @@
 ---
 title: Not Found
-layout: content-well
-permalink: 404.html
-eleventyExcludeFromCollections: true
+layout: layouts/content-well.njk
+url: /404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
